<resources>
    <string name="app_name">French – Romanian Dictionary</string>
    <string name="hello_world">Welcome world!</string>
    <string name="action_settings">General settings</string>
    <string name="bt_switch">Switch languages</string>
    <string name="cautare_termen">Search word</string>
    <string name="ellipsis">…</string>
    <string-array name="direction_array">
        <item>Write a French word…</item>
        <item>Write a Romanian word…</item>
    </string-array>
    <plurals name="tv_number_of_words">
        <item quantity="one">There is one word in DataBase</item>
        <item quantity="other">There are %1$s words</item>
    </plurals>
    <string name="tv_website">www.pontes.ro</string>
    <string name="hint_scrie_aici">Write here…</string>
    <string name="bt_search">Search</string>
    <string name="bt_cancel_search">Clear</string>
    <string name="bt_learn_irregular_verbs">Irregular verbs…</string>
    <string name="warning">Warning!</string>
    <string name="error">Error!</string>
    <string name="warning_wrong_search">You must write at least two letters to search!</string>
    <string name="warning_not_results">No results found!&lt;br>Searched for: &lt;i>%1$s&lt;/i>.&lt;br>Try again.</string>
    <string name="warning_no_tts_available_fr">Text to Speech voice is not available for chosen locale.\nTry to set another language in Settings.\nYou can also install a TTS engine with an French voice language.</string>
    <string name="warning_no_tts_available_ro">Text to Speech voice is not available for Romanian language.\nTry to update the Google Text-to-speech engine in Google Play Store.\nStarting January 2018, Google included a Romanian voice in their free speech synthesizer.</string>
    <string name="tv_word_and_explanation">&lt;b>%1$s&lt;/b> – %2$s</string>
    <plurals name="tv_number_of_results">
        <item quantity="one">One result found:</item>
        <item quantity="other">%d results found:</item>
    </plurals>
    <string name="mnu_settings">General settings</string>
    <string name="mnu_display">Text size</string>
    <string name="mnu_about">About dictionary…</string>
    <string name="mnu_go_to_web_page">Application web page</string>
    <string name="mnu_online_version">Go to dictionary web version</string>
    <string name="mnu_app_in_play_store">View the application in Play Store</string>
    <string name="mnu_default_settings">Reset to defaults…</string>
    <string name="title_default_settings">Reset to defaults</string>
    <string name="body_default_settings">Are you sure you want to reset it?\nThe program will be in its initial state.\nIf you bought the Premium version, this will be re-activated after a new launch of the application.</string>
    <string name="title_activity_settings">General Settings</string>
    <string name="enable_sounds">Enable sounds</string>
    <string name="enable_shake">Shake to initiate a new search</string>
    <string name="enable_screen_awake">Keep screen awake</string>
    <string name="enable_ime_action">Start searching when the lower right corner button of the virtual keyboards is pressed</string>
    <string name="search_full_text">Enable full text search (this will display only whole words, delimited by non-alphanumeric characters)</string>
    <string name="title_activity_display_settings">Text size</string>
    <string name="display_choose_size">Choose the size of the results text:</string>
    <string name="about">About Dictionary</string>
    <string name="app_version">French – Romanian Dictionary, version 3.0</string>
    <string name="app_release_date">The 1.0 version was released on Wednesday, 10 February 2016</string>
    <string name="app_last_update">Last update was released on Tuesday, December 20th, 2022</string>
    <string name="app_creator">Programmed by Emanuel Boboiu (Manu)</string>
    <string name="phone_number">Phone: +40740203043</string>
    <string name="email_address">E-mail: android@pontes.ro</string>
    <string name="web_address">Web: www.android.pontes.ro</string>
    <string name="app_credits2">Icon and images created by Iulian Duma and Ștefan Halus</string>
    <string name="app_credits3">Database created by Florin Rădulescu</string>
    <string name="app_credits4">Beta testing: Iulian Duma and Ioto Hăinală</string>
    <string name="mnu_help">Help…</string>
    <string name="help_alert_title">Help for Dictionary</string>
    <string-array name="information_array">
        <item>French Romanian Dictionary is very simple, easy to use and comprehensive.</item>
        <item>It contains thousands of words.</item>
        <item>Allows translation from French to Romanian and from Romanian to French.</item>
        <item>The database is stored in your phone or tablet, no internet connection is needed (there is an offline database).</item>
        <item>---------------</item>
        <item>To search a term, fill in the edit field found in the upper part of the main window and tap the search button.</item>
        <item>The results will appear in a list of maximum 300 items.</item>
        <item>To change the search direction, tap the Switch languages button found above the edit field.</item>
        <item>---------------</item>
        <item>Tapping the results, the French fragments are read by a voice found in your phone to hear their pronunciation.</item>
        <item>Tapping long the results, a context menu appears.</item>
        <item>In this context menu you can choose to add a result into vocabulary, hear the French part pronounced by a voice, to hear the word spelled by the same voice, to copy the result into clipboard.</item>
        <item>---------------</item>
        <item>There are many options which can be enabled or disabled in settings: change search mode, all occurrences or full words only, keep screen awake, play sounds or not for some events, shake device for a new search, choose text size.</item>
        <item>There is also a possibility to change the background of all screens. By default a random background is chosen at first launch of the dictionary. The background can be also disabled. All these settings can be found in Settings, Choose background.</item>
        <item>In Voice settings (TTS) it\'s possible to change the preferred voice for pronouncing French parts of the results. All synthesizer engines available are shown, for each of them appearing the French voice variants. There is also possible to change the speed and pitch of the voice.</item>
        <item>---------------</item>
        <item>My vocabulary module is a tool which allows to add words sorted into sections in a separate database.</item>
        <item>Tap long a result and choose in the context menu Add to My vocabulary.\nAn alert to choose an existing section or to create a new one where to add the result appears.</item>
        <item>In the My vocabulary window it is possible to view records by sections, to delete them and other actions.\nThis way it is possible to learn easily new French words.</item>
        <item>Any section can be exported in a file with .frd extension on the external storage.\nTo import a section from file, just open it using a file manager.</item>
        <item>There are also predefined sections like Animals, Colors which can be imported.\nThese predefined sections can be found in the menu of My vocabulary module.</item>
        <item>---------------</item>
        <item>In the Standard version, in the bottom part of the main windows of the application some Google ads appear.</item>
        <item>There is a Premium version which removes the ads, this way the application works better.</item>
        <item>Go in main menu of the dictionary and choose Premium version to make the purchase. Paying a small among, the Premium version will be available forever, even after a re-installation of the dictionary.</item>
        <item>The paid version is available for all devices signed-in with the same Google account.</item>
        <item>---------------</item>
        <item>For other questions or to make suggestions, please write to emanuelboboiu@gmail.com.</item>
        <item>---------------</item>
    </string-array>
    <string name="banner_ad_unit_id_test">ca-app-pub-3940256099942544/6300978111</string>
    <string name="banner_ad_unit_id">ca-app-pub-9705662823127450/1072686782</string>
    <string name="banner_ad_application_id">ca-app-pub-9705662823127450~8951493264</string>
    <string name="title_activity_verbs">Irregular Verbs</string>
    <string name="mnu_irregular_verbs">Verbs</string>
    <string name="mnu_go_to_dictionary">Dictionary</string>
    <string name="tv_welcome_verbs_message">We know %1$s irregular verbs.\nYou can learn them reading the alphabetical list, or you can choose our quizzes.</string>
    <string name="bt_verbs_list">List</string>
    <string name="bt_verbs_quiz">Quiz</string>
    <string name="tv_choose_letter">Choose an initial to show verbs</string>
    <string name="in_spinner_choose_a_letter">- choose here -</string>
    <string name="in_spinner_all_initials">all - %1$s</string>
    <string name="verb_in_list">%1$s. &lt;b>%2$s&lt;/b>, %3$s, %4$s – &lt;i>%5$s&lt;/i></string>
    <string name="choose_forms_to_fill_in">Choose the forms to fill in:</string>
    <string name="bt_start_quiz">Start!</string>
    <string name="bt_next_item">Next…</string>
    <string name="bt_finish_quiz">Finish!</string>
    <string name="text_unfilled">.......</string>
    <string name="content_description_unfilled">The %1$s form is missing. Tap here to fill in it.</string>
    <string-array name="verb_forms_array">
        <item>Nothing</item>
        <item>1st</item>
        <item>2nd</item>
        <item>3rd</item>
    </string-array>
    <string name="no_forms_were_chosen">You must choose at least one form to fill in.\nCheck the forms you want to fill in and tap again the Start button.</string>
    <string name="item_title_in_quiz">Item %1$s of %2$s:</string>
    <string name="quiz_message_before_start">Choose one, two or three forms to fill in, after tap the Start button.\nThe items will appear here one by one.</string>
    <string name="mnu_settings_submenu">Settings</string>
    <string name="mnu_web_submenu">WEB resources</string>
    <string name="mnu_get_premium_version">Premium version…</string>
    <string name="cm_add_to_vocabulary">Add to My Vocabulary</string>
    <string name="cm_speak_result">Say aloud</string>
    <string name="cm_spell_result">Spell aloud</string>
    <string name="cm_copy_result">Copy whole result into clipboard</string>
    <string name="cm_copy_word">Copy only the term into clipboard</string>
    <string name="cm_copy_explanation">Copy only the explanation into clipboard</string>
    <string name="mnu_vocabulary">Vocabulary</string>
    <string name="cm_properties">Properties…</string>
    <string name="cm_delete">Delete</string>
    <string name="mnu_delete_all">Empty the vocabulary…</string>
    <string name="mnu_delete_section">Delete section…</string>
    <string name="mnu_section_information">Section information…</string>
    <string name="cm_edit">Edit</string>
    <string name="mnu_add_in_section">Add in section…</string>
    <string name="mnu_import_predefined">Import predefined sections…</string>
    <string name="mnu_rate">Rate application…</string>
    <string name="mnu_tts_settings">Voice settings (TTS)</string>
    <string name="mnu_background_settings">Choose background</string>
    <string name="bt_voice">Voice search</string>
    <string name="mnu_search_history">Log</string>
    <string name="sh_cm_copy_result">Copy this word into clipboard</string>
    <string name="sh_cm_delete_result">Delete this record from log</string>
    <string name="enable_history">Enable search history (log)</string>
    <string name="sh_cm_search_result">Search in dictionary</string>
    <string name="bt_premium">Premium!</string>
</resources>