<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/cmSpeakResult"
        android:orderInCategory="299"
        android:title="@string/cm_speak_result"
        app:showAsAction="never" />
    <item
        android:id="@+id/cmSpellResult"
        android:orderInCategory="300"
        android:title="@string/cm_spell_result"
        app:showAsAction="never" />
    <item
        android:id="@+id/cmCopyResult"
        android:orderInCategory="500"
        android:title="@string/cm_copy_result"
        app:showAsAction="never" />
    <item
        android:id="@+id/cmCopyWord"
        android:orderInCategory="501"
        android:title="@string/cm_copy_word"
        app:showAsAction="never" />
    <item
        android:id="@+id/cmCopyExplanation"
        android:orderInCategory="502"
        android:title="@string/cm_copy_explanation"
        app:showAsAction="never" />
    <item
        android:id="@+id/cmVocabularyEdit"
        android:icon="@android:drawable/ic_menu_edit"
        android:orderInCategory="598"
        android:title="@string/cm_edit"
        app:showAsAction="never" />
    <item
        android:id="@+id/cmVocabularyDelete"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="600"
        android:title="@string/cm_delete"
        app:showAsAction="never" />
    <item
        android:id="@+id/cmVocabularyProperties"
        android:orderInCategory="700"
        android:title="@string/cm_properties"
        app:showAsAction="never" />

</menu>