<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="ro.pontes.englishromaniandictionary.VocabularyActivity">

    <item
        android:id="@+id/mnuImportPredefined"
        android:orderInCategory="110"
        android:showAsAction="never"
        android:title="@string/mnu_import_predefined" />
    <item
        android:id="@+id/mnuSectionInformation"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="120"
        android:showAsAction="never"
        android:title="@string/mnu_section_information" />
    <item
        android:id="@+id/mnuSectionAddNew"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="150"
        android:showAsAction="never"
        android:title="@string/mnu_add_in_section" />
    <!--
        <item
            android:id="@+id/mnuSectionExport"
            android:icon="@android:drawable/ic_menu_add"
            android:orderInCategory="170"
            android:showAsAction="never"
            android:title="@string/mnu_export_category" />
            -->
    <item
        android:id="@+id/mnuDeleteSection"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="200"
        android:showAsAction="never"
        android:title="@string/mnu_delete_section" />
    <item
        android:id="@+id/mnuDeleteAll"
        android:icon="@android:drawable/ic_menu_delete"
        android:orderInCategory="201"
        android:showAsAction="never"
        android:title="@string/mnu_delete_all" />
    <item
        android:id="@+id/mnuGoToDictionary"
        android:orderInCategory="300"
        android:showAsAction="ifRoom|withText"
        android:title="@string/mnu_go_to_dictionary" />
    <item
        android:id="@+id/mnuHelp"
        android:icon="@android:drawable/ic_menu_help"
        android:orderInCategory="850"
        android:showAsAction="never"
        android:title="@string/mnu_help" />
    <item
        android:id="@+id/mnuAboutDialog"
        android:icon="@android:drawable/ic_menu_info_details"
        android:orderInCategory="900"
        android:showAsAction="never"
        android:title="@string/mnu_about" />
    <item
        android:id="@+id/mnuRate"
        android:orderInCategory="1000"
        android:showAsAction="never"
        android:title="@string/mnu_rate" />

</menu>