<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMain"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:isScrollContainer="false"
        android:orientation="vertical"
        tools:ignore="UselessParent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="left"
            android:orientation="vertical">

            <CheckBox
                android:id="@+id/cbtSearchFullTextSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/search_full_text"
                android:textSize="@dimen/buttons_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbtSoundsSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/enable_sounds"
                android:textSize="@dimen/buttons_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbtOnshakeSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/enable_shake"
                android:textSize="@dimen/buttons_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbtScreenAwakeSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/enable_screen_awake"
                android:textSize="@dimen/buttons_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbtImeSetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/enable_ime_action"
                android:textSize="@dimen/buttons_size"
                android:textStyle="bold" />

            <CheckBox
                android:id="@+id/cbtHistorySetting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onCheckboxClicked"
                android:text="@string/enable_history"
                android:textSize="@dimen/buttons_size"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>

</LinearLayout>